--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "element-plus": "^2.9.10",
     "vue": "^3.5.13",
+    "vue-i18n": "^12.0.0-alpha.2",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
