--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.9.0",
     "element-plus": "^2.9.10",
     "vue": "^3.5.13",
     "vue-i18n": "^12.0.0-alpha.2",
